--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,56 @@
+# Core Framework
 Flask==2.3.3
-requests==2.31.0
 flask-cors==4.0.0
 gunicorn==21.2.0
+requests==2.31.0
+
+# AI and Machine Learning
+tensorflow==2.13.0
+torch==2.0.1
+scikit-learn==1.3.0
+numpy==1.24.3
+pandas==2.0.3
+
+# Vector Database and Search
+qdrant-client==1.6.4
+sentence-transformers==2.2.2
+
+# Telegram Bot
+python-telegram-bot==20.6
+
+# LocalAI Integration
+ollama==0.1.7
+
+# Database
+sqlite3
+
+# Image Processing
+Pillow==10.0.0
+opencv-python==4.8.0.76
+
+# Mathematical Computing
+sympy==1.12
+matplotlib==3.7.2
+scipy==1.11.1
+
+# Text Processing
+nltk==3.8.1
+spacy==3.6.1
+
+# Configuration and Environment
+python-dotenv==1.0.0
+pyyaml==6.0.1
+
+# Monitoring and Logging
+psutil==5.9.5
+prometheus-client==0.17.1
+
+# Development and Testing
+pytest==7.4.0
+pytest-cov==4.1.0
+black==23.7.0
+flake8==6.0.0
+
+# Production Dependencies
+redis==4.6.0
+celery==5.3.1
